mule-user-guide/v/3.5/classloader-control-in-mule.adoc
Mule中的= 类加载器控制

本主题将向您介绍Mule中的类加载，并向您展示如何覆盖应用程序和插件中的类加载。

注意：将用户第三方库存储在Mule版本目录下的`lib/user`目录中。例如，对于3.5.3 Mule Enterprise发行版，将库存放在`mule-enterprise-3.5.3/lib/user`目录中。

在Mule中== 类加载

Mule使用类加载器来查找和加载要执行的类。当Mule使用类加载器时，它按以下顺序执行：

.  Java虚拟机创建的引导，扩展和CLASSPATH类加载器。这个类加载器加载核心Java库。
.  Mule系统类加载器。这个类加载器加载标准的Mule库，也就是<MULE_HOME> / lib目录和子目录中的库，其中<MULE_HOME>是安装Mule ESB的目录。
. 一个或多个共享域类加载器。这些类加载器用于在应用程序之间共享库或允许应用程序使用不同版本的库。这些库位于<MULE_HOME> / lib / shared / <domain>库中，其中<domain>是应用程序的域。共享域类加载器是可选的，默认情况下没有。
. 一个或多个Mule应用程序类加载器，用于加载Mule应用程序中的类或库，即<MULE_HOME> / apps / {{}} / lib目录中的库，其中{{3} }是应用程序的名称。

下图说明了Mule classloader的顺序：

image:ClassLoader-Architecture.png[类加载器架构]

虽然这种类加载架构可满足大多数类加载需求，但有时您可能需要重写默认的类加载方案。例如，假设应用程序需要与其捆绑的第三方库。这可能与共享域类加载器将加载的库版本（即，已与Mule捆绑的库的版本）冲突。你如何确保所需的库的版本与应用程序一起使用？为了解决这些需求，Mule 3.2.0添加了对细粒度类加载控件的支持，使您能够覆盖默认的类加载。

== 细粒度类加载控件

Mule引入了一个新的配置属性loader.override，它使您能够覆盖默认的类加载。您可以在应用程序的mule-deploy.properties文件中指定属性，并确定将在覆盖中使用的类，包或两者的列表。

====
mule-deploy.properties
====
====
loader.override = <comma-separated list of classes or packages>
====

列表中的每个类或包都使用完全限定的名称指定。例如，包含类（com.example.MyProvider）和包（com.sun.jersey）的覆盖列表将按如下方式指定：

====
loader.override = com.example.MyProvider，com.sun.jersey
====

[WARNING]
如果在覆盖列表中指定了一个包，它将应用于其所有子包。例如，com.sun.jersey也将包含com.sun.jersey.impl。

*Blocking*

您还可以阻止加载类，以便在应用程序中完成类查找，而不是在Mule中完成。您可以按照指定类覆盖的方式指定阻塞，即使用loader.override。但是，列表中的类或包的标准名称必须以 - （破折号/减号）作为前缀。这里是一个阻塞规范的例子：

====
loader.override = -com.example.AnotherProvider
====

阻塞是一种比类重写更先进的概念，许多用户不需要考虑它。但对于插件开发人员来说这非常重要。阻塞和类覆盖的区别在于，如果在阻塞列表中指定了类，则其查找仅在应用程序或插件中执行。换句话说，如果该类由Mule提供，它将不会在应用程序或插件中可见。即使Mule在系统级别上有这样的类，ClassNotFoundException也是一个有效的结果。

*Classloading Override/Blocking Path Diagram*

下面是一个图表，说明如何为类覆盖和阻塞处理类加载。当你查看图表时注意到每个类加载器都有一个父类加载器。除非配置了加载器重写，否则类加载器首先会在尝试查找类本身之前将类的搜索委托给其父类加载器（类加载器是其父类加载器的子代）。

image:chart.png[图表]

[TIP]
请注意，对包使用覆盖（并且不阻止）时，将试图从应用程序类加载器加载该包中的每个类。如果找不到类，那么将使用应用程序的父类加载器。

===  Mule插件系统

Mule现在有一个插件系统，允许应用程序打包他们使用的插件，并且可以选择允许这些插件以应用程序的相同方式来控制它们的类加载。

启用插件来控制类加载可能非常有用。例如，一个连接器可能会绑定一个已经过测试的第三方库（即与Mule提供的库不同）并声明加载第三方版本的首选项。应用程序只需要添加一个插件来识别加载器覆盖中的第三方库。加载器覆盖指定为插件结构中的属性loader.override（在下面的插件布局中）。

该模块系统还为具有相关性的Mule扩展提供简单的分发格式。

*Application Layout*

Mule插件被部署为Mule应用程序的一部分。 Mule应用程序结构已扩展为添加一个插件顶级目录：

====
*Application Layout*
====
====
/- +
   / `classes` +
   / `lib` +
   / `plugins` +
   `mule-deploy.properties (optional`）+
   `mule-app.properties (optional`）
====

这里有一些要考虑的插件：

* 多个插件（如连接器）可以捆绑在应用程序中。
* 插件按文件名以自然排序顺序进行部署。
* 每个插件必须打包成一个带有预定义结构的zip文件（如下面的插件布局所示）。
* 目前不支持分解插件。其基本原理是鼓励和维护一个简单的只有一个文件的插件分发模型。
* 插件的部署生命周期与应用程序绑定。

*Plugin Layout*

插件布局是Mule应用程序的简化版本。

====
*Plugin Layout*
====
====
/-
   / `classes` +
   / `lib` +
   `plugin.properties (optional`）
====

*Plugin Properties*

目前可识别以下插件属性：

*loader.override*  - 为插件中的类加载提供细粒度的控制。这与应用程序可用的细粒度类加载器控件级别相同（请参见下面的h细粒度类加载控件）。应用程序可以简单地通过包含指定loader.override属性的插件来指示其类加载首选项。应用程序不需要执行任何额外的类加载器配置。但是，如有必要，应用程序可以覆盖该插件声明的任何类加载首选项。
